Use platform specific path separator in wallaby bootstrap.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsdom": "^7.0.2",
     "mai-chai": "0.x",
     "mocha": "^2.3.3",
+    "path": "^0.12.7",
     "react": "^0.14.2",
     "react-addons-test-utils": "^0.14.2",
     "react-dom": "^0.14.2"
