--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "presets": [
       "es2015",
       "react"
+    ],
+    "plugins": [
+      "transform-react-display-name"
     ]
   },
   "devDependencies": {
     "babel-core": "^6.0.20",
+    "babel-plugin-transform-react-display-name": "^6.0.14",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "jsdom": "^7.0.2",
