--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Playground to experiment with React and wallaby.js.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha src/test/**/*.spec.js"
+    "test": "mocha src/test/**/*.js"
   },
   "repository": {
     "type": "git",
