--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["es2015", "react"],
+  "presets": ["stage-0", "es2015", "react"],
   "plugins": ["transform-react-display-name"]
 }
