--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-transform-react-display-name": "^6.1.18",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "^6.1.18",
     "jsdom": "^7.0.2",
     "mai-chai": "^1.0.4",
     "mocha": "^2.3.3",
