--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/epsitec-sa/react-usage",
   "devDependencies": {
     "babel-core": "^6.1.20",
+    "babel-plugin-transform-decorators": "^6.1.18",
     "babel-plugin-transform-react-display-name": "^6.1.18",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
