--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
   "license": "MIT",
   "homepage": "https://github.com/epsitec-sa/react-usage",
   "devDependencies": {
-    "babel-core": "^6.1.20",
+    "babel-core": "^6.1.21",
     "babel-plugin-transform-decorators": "^6.1.18",
     "babel-plugin-transform-react-display-name": "^6.1.18",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "babel-preset-stage-0": "^6.1.18",
+    "chai": "^3.4.1",
     "jsdom": "^7.0.2",
-    "mai-chai": "^1.0.4",
-    "mocha": "^2.3.3",
+    "mai-chai": "^1.1.2",
+    "mocha": "^2.3.4",
     "path": "^0.12.7",
     "react": "^0.14.2",
     "react-addons-shallow-compare": "^0.14.2",
