--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Playground to experiment with React and wallaby.js.",
   "main": "index.js",
   "scripts": {
+    "compile": "babel -d lib/ src/",
     "test": "mocha src/test/**/*.js"
   },
   "repository": {
@@ -14,15 +15,17 @@
   "license": "MIT",
   "homepage": "https://github.com/epsitec-sa/react-usage",
   "devDependencies": {
-    "babel-core": "^6.2.1",
-    "babel-plugin-transform-decorators": "^6.1.18",
-    "babel-plugin-transform-react-display-name": "^6.1.18",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "babel-preset-stage-0": "^6.1.18",
+    "babel-core": "^6.2.4",
+    "babel-plugin-transform-decorators": "^6.2.4",
+    "babel-plugin-transform-react-display-name": "^6.2.4",
+    "babel-preset-es2015": "^6.2.4",
+    "babel-preset-react": "^6.2.4",
+    "babel-preset-stage-0": "^6.2.4",
     "chai": "^3.4.1",
-    "electrum-store": "0.0.2",
-    "jsdom": "^7.0.2",
+    "electrum": ">=1.2.0",
+    "electrum-arc": ">=1.3.11",
+    "electrum-store": ">=0.0.2",
+    "jsdom": "^7.1.0",
     "mai-chai": "^1.1.2",
     "mocha": "^2.3.4",
     "path": "^0.12.7",
