--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["stage-0", "es2015", "react"],
-  "plugins": ["transform-react-display-name", "transform-decorators"]
+  "plugins": ["transform-react-display-name", "transform-decorators-legacy"]
 }
