--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-cli": "^6.2.4",
     "babel-core": "^6.2.4",
     "babel-plugin-transform-decorators": "^6.2.4",
+    "babel-plugin-transform-decorators-legacy": "^1.1.0",
     "babel-plugin-transform-react-display-name": "^6.2.4",
     "babel-preset-es2015": "^6.2.4",
     "babel-preset-react": "^6.2.4",
