--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
   "devDependencies": {
     "babel-cli": "^6.3.15",
     "babel-core": "^6.3.15",
-    "babel-plugin-transform-decorators-legacy": "^1.1.0",
+    "babel-plugin-transform-decorators-legacy": "^1.2.0",
     "babel-plugin-transform-react-display-name": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "chai": "^3.4.1",
-    "electrum": "^2.2.6",
-    "electrum-store": "^1.0.2",
+    "electrum": "^2.4.1",
+    "electrum-events": "^1.0.4",
+    "electrum-store": "^1.0.4",
     "electrum-theme": "^1.1.3",
     "jsdom": "^7.2.0",
     "mai-chai": "^1.1.2",
